# WebGPU-Emscripten-Playground

./: .gitignore  CMakeLists.txt  build.sh  build_and_run.sh  native_build_and_run.sh  setup.sh
src/: basic_render.h  dawn_window.h  main.cpp  raw_shaders.h  renderer_wgl2.h
web/: page.html
